added pictures and create grid

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Bloomscape | Money Tree</title>
-  <!-- We need to add in an important meta tag here -->
-  <!-- Link the css here -->
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
   <!-- If you are using a Google font, add your links here OR as @import in your css  -->
 </head>
 <body>
@@ -21,10 +21,14 @@
     </nav>
   </header>
 
-
-
   <!-- Add content for your product page using provided text in content.txt -->
   <main class="wrapper">
+    <ul>
+      <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
+      <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
+      <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li>
+      <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot"></li>
+    </ul>
 
 
 
