--- a/index.html
+++ b/index.html
@@ -29,6 +29,14 @@
       <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li>
       <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot"></li>
     </ul>
+    <article class="money-tree">
+      <h2>Money Tree</h2>
+      <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
+      <p>Common name(s):</p>
+      <p>Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
+      <p>Botanical name: Pachira aquatica</p>
+      <p>$169</p>
+    </article>
 
 
 
