--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li>
       <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot"></li>
     </ul>
-    <article class="">
+    <article class="info">
       <section class="money-tree">
         <h2>Money Tree</h2>
         <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
@@ -39,28 +39,39 @@
         <p>$169</p>
         <span>Add to cart</span>
       </section>
+
       <section class="description">
         <h2>Description</h2>
         <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
         <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
         <p>A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
       </section>
+
       <section class="care">
         <h2>Details & Care</h2>
         <dl class="care-list">
-          <dt>Size</dt>
+          <dt>Size:</dt>
           <dd>XL - 32”-40” tall (including recycled plastic Ecopot)</dd>
-          <dt>Difficulty</dt>
+          <dt>Difficulty:</dt>
           <dd>No-fuss - Carefree</dd>
-          <dt>Light</dt>
+          <dt>Light:</dt>
           <dd>Low to Bright Indirect</dd>
-          <dt>Pet friendly</dt>
+          <dt>Pet friendly:</dt>
           <dd>Yes - Non-toxic and pet-friendly</dd>
-
-
+          <dt>Air Cleaner:</dt>
+          <dd>Yes - Releases oxygen and absorbs pollutants</dd>
         </dl>
-
       </section>
+
+      <section class="included">
+        <h2>What's Included</h2>
+        <ul>
+          <li>Healthy plant pre-potted with premium soil</li>
+          <li>Ecopots pot and saucer</li>
+          <li>All the tips and tricks for expert-level care</li>
+        </ul>
+      </section>
+
     </article>
 
 
