--- a/index.html
+++ b/index.html
@@ -72,6 +72,23 @@
         </ul>
       </section>
 
+      <section class="what-saying">
+        <h2>What people are saying</h2>
+        <blockquote>
+          <p>"This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"</p>
+          <cite>- Jess J.</cite>
+        </blockquote>
+        <blockquote>
+          <p>"The plants are in such great shape when they arrive, the pots are beautiful, and the variety is fantastic."</p>
+          <cite>- Meghan K.</cite>
+        </blockquote>
+        <blockquote>
+          <p>"I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"</p>
+          <cite>- Kayla B.</cite>
+        </blockquote>
+
+      </section>
+
     </article>
 
 
