Add all People Also Browsed elements

--- a/index.html
+++ b/index.html
@@ -86,6 +86,32 @@
           <p>"I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"</p>
           <cite>- Kayla B.</cite>
         </blockquote>
+      </section>
+
+      <section class="also-browsed">
+        <h2>People also browsed</h2>
+        <ul>
+          <li>
+            <img src="images/sanseviera.jpeg" alt="sanseviera tree">
+            <p>Sanseviera</p>
+            <p>$149</p>
+          </li>
+          <li>
+            <img src="images/mini-money-tree.jpeg" alt="Mini Money Tree">
+            <p>Mini Money Tree</p>
+            <p>$49</p>
+          </li>
+          <li>
+            <img src="images/red-prayer-plant.jpeg" alt="Red Prayer Plant">
+            <p>Red Prayer Plant</p>
+            <p>$39</p>
+          </li>
+          <li>
+            <img src="images/bird-of-paradise.jpeg" alt="Bird of Paradise">
+            <p>Bird of Paradise</p>
+            <p>$199</p>
+          </li>
+        </ul>
 
       </section>
 
