create flex and grid for header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </header>
 
   <!-- Add content for your product page using provided text in content.txt -->
-  <main class="wrapper">
+  <main class="first">
     <ul>
       <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
       <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
