Create grid for pictures

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </header>
 
   <!-- Add content for your product page using provided text in content.txt -->
-  <main class="first">
-    <ul>
+  <main>
+    <ul class="pictures">
       <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
       <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
       <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li>
