Placed add to cart button in center

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
     <article class="info">
       <section class="money-tree">
         <h2>Money Tree</h2>
-        <p>Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
-        <p>Common name(s):</p>
-        <p>Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
-        <p>Botanical name: <i>Pachira aquatica</i></p>
-        <p>$169</p>
-        <span>Add to cart</span>
+        <p class="para-1">Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
+        <p class="para-2">Common name(s):</p>
+        <p class="para-2">Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
+        <p class="para-2">Botanical name: <i>Pachira aquatica</i></p>
+        <p class="para-3">$169</p>
+        <span><a href="#">Add to cart</a></span>
       </section>
 
       <section class="description">
         <h2>Description</h2>
-        <p>Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
-        <p>The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
-        <p>A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
+        <p class="para-1">Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
+        <p class="para-1">The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
+        <p class="para-1">A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
       </section>
 
       <section class="care">
