Put detailed list on single line

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <span><a href="#">Add to cart</a></span>
       </section>
 
-      <section class="description">
+      <section>
         <h2>Description</h2>
         <p class="para-1">Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
         <p class="para-1">The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
