Put also browsed section in grid, created links for other plants, completed mobile version

--- a/index.html
+++ b/index.html
@@ -88,27 +88,27 @@
         </blockquote>
       </section>
 
-      <section class="also-browsed">
+      <section>
         <h2>People also browsed</h2>
-        <ul>
+        <ul class="also-browsed">
           <li>
             <img src="images/sanseviera.jpeg" alt="sanseviera tree">
-            <p>Sanseviera</p>
+            <p><a href="#">Sanseviera</a></p>
             <p>$149</p>
           </li>
           <li>
             <img src="images/mini-money-tree.jpeg" alt="Mini Money Tree">
-            <p>Mini Money Tree</p>
+            <p><a href="#">Mini Money Tree</a></p>
             <p>$49</p>
           </li>
           <li>
             <img src="images/red-prayer-plant.jpeg" alt="Red Prayer Plant">
-            <p>Red Prayer Plant</p>
+            <p><a href="#">Red Prayer Plant</a></p>
             <p>$39</p>
           </li>
           <li>
             <img src="images/bird-of-paradise.jpeg" alt="Bird of Paradise">
-            <p>Bird of Paradise</p>
+            <p><a href="#">Bird of Paradise</a></p>
             <p>$199</p>
           </li>
         </ul>
