arranged articles into a grid

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 
   <!-- Add content for your product page using provided text in content.txt -->
   <main>
-    <ul class="pictures">
-      <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
-      <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
-      <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li>
-      <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot"></li>
-    </ul>
+    <article class="picture">
+      <ul>
+        <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
+        <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
+        <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li  >
+        <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot">  </li>
+      </ul>
+    </article>
     <article class="info">
       <section class="money-tree">
         <h2>Money Tree</h2>
@@ -49,7 +51,7 @@
 
       <section class="care">
         <h2>Details & Care</h2>
-        <dl class="care-list">
+        <dl>
           <dt>Size:</dt>
           <dd>XL - 32”-40” tall (including recycled plastic Ecopot)</dd>
           <dt>Difficulty:</dt>
@@ -72,7 +74,7 @@
         </ul>
       </section>
 
-      <section class="what-saying">
+      <section class="saying">
         <h2>What people are saying</h2>
         <blockquote>
           <p>"This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"</p>
@@ -87,32 +89,32 @@
           <cite>- Kayla B.</cite>
         </blockquote>
       </section>
+    </article>
 
-      <section>
-        <h2>People also browsed</h2>
-        <ul class="also-browsed">
-          <li>
-            <img src="images/sanseviera.jpeg" alt="sanseviera tree">
-            <p><a href="#">Sanseviera</a></p>
-            <p>$149</p>
-          </li>
-          <li>
-            <img src="images/mini-money-tree.jpeg" alt="Mini Money Tree">
-            <p><a href="#">Mini Money Tree</a></p>
-            <p>$49</p>
-          </li>
-          <li>
-            <img src="images/red-prayer-plant.jpeg" alt="Red Prayer Plant">
-            <p><a href="#">Red Prayer Plant</a></p>
-            <p>$39</p>
-          </li>
-          <li>
-            <img src="images/bird-of-paradise.jpeg" alt="Bird of Paradise">
-            <p><a href="#">Bird of Paradise</a></p>
-            <p>$199</p>
-          </li>
-        </ul>
-      </section>
+    <article class="browsed">
+      <h2>People also browsed</h2>
+      <ul class="also-browsed">
+        <li>
+          <img src="images/sanseviera.jpeg" alt="sanseviera tree">
+          <p><a href="#">Sanseviera</a></p>
+          <p>$149</p>
+        </li>
+        <li>
+          <img src="images/mini-money-tree.jpeg" alt="Mini Money Tree">
+          <p><a href="#">Mini Money Tree</a></p>
+          <p>$49</p>
+        </li>
+        <li>
+          <img src="images/red-prayer-plant.jpeg" alt="Red Prayer Plant">
+          <p><a href="#">Red Prayer Plant</a></p>
+          <p>$39</p>
+        </li>
+        <li>
+          <img src="images/bird-of-paradise.jpeg" alt="Bird of Paradise">
+          <p><a href="#">Bird of Paradise</a></p>
+          <p>$199</p>
+        </li>
+      </ul>
     </article>
   </main>
 
