--- a/index.html
+++ b/index.html
@@ -23,75 +23,76 @@
 
   <!-- Add content for your product page using provided text in content.txt -->
   <main>
-    <article class="picture">
-      <ul>
-        <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
-        <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
-        <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li  >
-        <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot">  </li>
-      </ul>
-    </article>
-    <article class="info">
-      <section class="money-tree">
-        <h2>Money Tree</h2>
-        <p class="para-1">Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
-        <p class="para-2">Common name(s):</p>
-        <p class="para-2">Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
-        <p class="para-2">Botanical name: <i>Pachira aquatica</i></p>
-        <p class="para-3">$169</p>
-        <span><a href="#">Add to cart</a></span>
-      </section>
-
-      <section>
-        <h2>Description</h2>
-        <p class="para-1">Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
-        <p class="para-1">The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
-        <p class="para-1">A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
-      </section>
-
-      <section class="care">
-        <h2>Details & Care</h2>
-        <dl>
-          <dt>Size:</dt>
-          <dd>XL - 32”-40” tall (including recycled plastic Ecopot)</dd>
-          <dt>Difficulty:</dt>
-          <dd>No-fuss - Carefree</dd>
-          <dt>Light:</dt>
-          <dd>Low to Bright Indirect</dd>
-          <dt>Pet friendly:</dt>
-          <dd>Yes - Non-toxic and pet-friendly</dd>
-          <dt>Air Cleaner:</dt>
-          <dd>Yes - Releases oxygen and absorbs pollutants</dd>
-        </dl>
-      </section>
-
-      <section class="included">
-        <h2>What's Included</h2>
+    <article>
+      <section class="picture">
         <ul>
-          <li>Healthy plant pre-potted with premium soil</li>
-          <li>Ecopots pot and saucer</li>
-          <li>All the tips and tricks for expert-level care</li>
+          <li><img src="images/money-tree-wooden-plant-stand.jpeg" alt="money tree on stand"></li>
+          <li><img src="images/money-tree-plant-size.png" alt="money tree dimensions"></li>
+          <li><img src="images/money-tree-detailed.jpeg" alt="money tree detailed shot"></li  >
+          <li><img src="images/money-tree-alt-detailed.jpeg" alt="money tree alternate detail shot">  </li>
         </ul>
       </section>
+      <div>
+        <section class="money">
+          <h2>Money Tree</h2>
+          <p class="para-1">Popular for its use in Feng Shui, the Money Tree is a pet-friendly and air-purifying plant with large star-shaped leaves and a braided trunk to give your home a tropical feel.</p>
+          <p class="para-2">Common name(s):</p>
+          <p class="para-2">Money Tree, Good Luck Tree, Malabar Chestnut, Saba Nut, Guiana Chestnut, Wild Kapock Tree, Mexican Money Tree</p>
+          <p class="para-2">Botanical name: <i>Pachira aquatica</i></p>
+          <p class="para-3">$169</p>
+          <span><a href="#">Add to cart</a></span>
+        </section>
 
-      <section class="saying">
-        <h2>What people are saying</h2>
-        <blockquote>
-          <p>"This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"</p>
-          <cite>- Jess J.</cite>
-        </blockquote>
-        <blockquote>
-          <p>"The plants are in such great shape when they arrive, the pots are beautiful, and the variety is fantastic."</p>
-          <cite>- Meghan K.</cite>
-        </blockquote>
-        <blockquote>
-          <p>"I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"</p>
-          <cite>- Kayla B.</cite>
-        </blockquote>
-      </section>
+        <section class="description">
+          <h2>Description</h2>
+          <p class="para-1">Composed of several Pachinra aquatica plants braided together, the Money Tree resembles both a tree and a palm. Native from Mexico to northern South America where it grows up to 60 feet tall outdoors, this is a commonly found houseplant in East Asia where the braided trunk cultivation was popularized.</p>
+          <p class="para-1">The Money Tree was named after the Feng Shui belief that it will foster positive energy and bring good luck to its owner. This plant may also reduce stress, anxiety, and may also help to relieve sleeping disorders.</p>
+          <p class="para-1">A Clean Air Study by NASA named the Money Tree as one of the most effective houseplants for clearing toxins from the air of your home.</p>
+        </section>
+      </div>
+      <div>
+        <section class="care">
+          <h2>Details & Care</h2>
+          <dl>
+            <dt>Size:</dt>
+            <dd>XL - 32”-40” tall (including recycled plastic Ecopot)</dd>
+            <dt>Difficulty:</dt>
+            <dd>No-fuss - Carefree</dd>
+            <dt>Light:</dt>
+            <dd>Low to Bright Indirect</dd>
+            <dt>Pet friendly:</dt>
+            <dd>Yes - Non-toxic and pet-friendly</dd>
+            <dt>Air Cleaner:</dt>
+            <dd>Yes - Releases oxygen and absorbs pollutants</dd>
+          </dl>
+        </section>
+
+        <section class="included">
+          <h2>What's Included</h2>
+          <ul>
+            <li>Healthy plant pre-potted with premium soil</li>
+            <li>Ecopots pot and saucer</li>
+            <li>All the tips and tricks for expert-level care</li>
+          </ul>
+        </section>
+        <section class="saying">
+          <h2>What people are saying</h2>
+          <blockquote>
+            <p>"This is the best plant store I have ever ordered from! My plants were shipped/delivered so fast. When I had a question, Bloomscape got back to me right away, and they were so friendly!"</p>
+            <cite>- Jess J.</cite>
+          </blockquote>
+          <blockquote>
+            <p>"The plants are in such great shape when they arrive, the pots are beautiful, and the variety is fantastic."</p>
+            <cite>- Meghan K.</cite>
+          </blockquote>
+          <blockquote>
+            <p>"I knew nothing about plants, and was able to feel confident about caring for them. I haven’t killed one yet, thanks to help from your care guides and Plant Mom!"</p>
+            <cite>- Kayla B.</cite>
+          </blockquote>
+        </section>
+      </div>
     </article>
-
-    <article class="browsed">
+    <section class="browsed">
       <h2>People also browsed</h2>
       <ul class="also-browsed">
         <li>
@@ -115,7 +116,7 @@
           <p>$199</p>
         </li>
       </ul>
-    </article>
+    </section>
   </main>
 
   <!-- Do not change html markup in footer. -->
